--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --color-bg: #282828;
-    --color-fg: #EADBB2;
+    --color-fg: #F8C8DC;
     --color-link: #8F9191;
     --color-link-visited: #668F8B;
     --color-link-hover: #FA7921 ;
