--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --color-bg: #282828;
     --color-fg: #F8C8DC;
     --color-link: #F2D2BD;
-    --color-link-visited: #967bb6;
+    --color-link-visited: #CF9FFF;
     --color-link-hover: #F88379 ;
 }
 
