--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     --color-bg: #282828;
     --color-fg: #F8C8DC;
     --color-link: #F2D2BD;
-    --color-link-visited: #CF9FFF;
-    --color-link-hover: #F88379 ;
+    --color-link-visited: #C9A9A6;
+    --color-link-hover: #AA336A;
 }
 
 html, body {
