--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --color-bg: #282828;
     --color-fg: #F8C8DC;
     --color-link: #F2D2BD;
-    --color-link-visited: #C9A9A6;
+    --color-link-visited: #F2D2BD;
     --color-link-hover: #AA336A;
 }
 
